--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE HTML>
+<html manifest="tones.manifest">
 <style>button,select{width:10em;height:3em}</style>
 <center>
 <select id=note>
@@ -55,3 +57,4 @@ function stopNote(){
  document.getElementById('button').onclick=function(){playNote();};
 }
 </script>
+</html>
