--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@ Sound files from http://www.harmonize.com/metropolis/online_pitch_pipe.htm
 </center>
 <script>
 var keys=[
-'http://www.harmonize.com/metropolis/images/Sounds/AFlat.mp3',
-'http://www.harmonize.com/metropolis/images/Sounds/ANatural.mp3',
-'http://www.harmonize.com/metropolis/images/Sounds/BFlat.mp3',
-'http://www.harmonize.com/metropolis/images/Sounds/BNatural.mp3',
-'http://www.harmonize.com/metropolis/images/Sounds/CNatural.mp3',
-'http://www.harmonize.com/metropolis/images/Sounds/CSharp.mp3',
-'http://www.harmonize.com/metropolis/images/Sounds/DNatural.mp3',
-'http://www.harmonize.com/metropolis/images/Sounds/EFlat.mp3',
-'http://www.harmonize.com/metropolis/images/Sounds/ENaturalHigh.mp3',
-'http://www.harmonize.com/metropolis/images/Sounds/FNatural.mp3',
-'http://www.harmonize.com/metropolis/images/Sounds/FSharp.mp3',
-'http://www.harmonize.com/metropolis/images/Sounds/GNatural.mp3',
-'http://www.harmonize.com/metropolis/images/Sounds/AFlat.mp3',
+'AFlat.mp3',
+'ANatural.mp3',
+'BFlat.mp3',
+'BNatural.mp3',
+'CNatural.mp3',
+'CSharp.mp3',
+'DNatural.mp3',
+'EFlat.mp3',
+'ENaturalHigh.mp3',
+'FNatural.mp3',
+'FSharp.mp3',
+'GNatural.mp3',
+'AFlat.mp3',
 ];
 var a;
 var s;
