--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML>
 <html manifest="tones.manifest">
+<title>Pitch Pipe</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>button,select{width:10em;height:3em}</style>
 <center>
 <select id=note>
